# production-validation-framework

./: MY_COVER_LETTER.md  README.md  pyproject.toml
.zencoder/rules/: repo.md
PVF_System_Framework/: .env.example  .gitignore  AAA_PLUS_READINESS_REPORT.json  Dockerfile  GAPS_ANALYSIS_REPORT.json  Makefile  docker-compose.yml  initialize_validation_framework.py  main.py  prometheus.yml  requirements.txt  run_all_validations.py  setup_wizard.py
PVF_System_Framework/assets/: INFOGRAPHIC_ARCHITECTURE.html
PVF_System_Framework/docs/: BUSINESS_PLAN_TEAM_BUILDING.md  INVESTOR_PITCH_DECK.md  OPERATIONAL_GUIDE.md  SRS_DOCUMENTATION.md  TECHNICAL_MANUAL.md  USE_CASES_AND_SPECS.md  VALIDATION_FRAMEWORK_SUMMARY.md  VALIDATION_GUIDE.md
PVF_System_Framework/reports/: AAA_PLUS_READINESS_REPORT.json  COMPREHENSIVE_PERFORMANCE_VALIDATION_REPORT.json  GAPS_ANALYSIS_REPORT.json  INVESTOR_READY_SYSTEM_VALIDATION.json  TECHNICAL_VALIDATION_INVESTOR_REPORT.json
PVF_System_Framework/research_assets/: A Comprehensive Methodology for AAA+++ Digital Product Excellence and Market Dominance.txt  A Developer's Workflow for a Production-Ready Transfer Application.docx  A Developer's Workflow for a Production-Ready Transfer Application.txt  AI Code Validation Framework_.txt  Agentic Engineering Framework Implementation.txt  (+16 more)
validation_reports/: validation_report_20260220_075000.html  validation_report_20260220_075000.json  validation_report_20260220_081659.html  validation_report_20260220_081659.json  validation_report_20260220_082648.html  validation_report_20260220_082648.json
(+26 files in other folders)
