[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "production-validation-framework"
version = "0.1.0"
authors = [
  { name="David Akpoviroro Oke (MrIridescent)", email="david@mriridescent.com" },
]
description = "Production Validation Framework: A AAA+++ Digital Product Excellence suite for 100% market readiness validation. Built for the Creative Renaissance Man."
keywords = ["production-readiness", "validation-framework", "AAA+++-excellence", "agentic-engineering", "cybersecurity", "purple-teaming", "forensic-audit", "turnkey"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "cryptography>=3.4.8",
    "bcrypt>=4.0.0",
    "locust>=2.14.0",
    "prometheus-client>=0.16.0",
    "colorama>=0.4.6",
    "click>=8.0.0",
]

[project.scripts]
pvf = "validation_framework.validate_production_readiness:main"

[tool.setuptools.packages.find]
where = ["PVF_System_Framework"]
include = ["validation_framework*"]
